# routes/preformRoutes.js
@@ -8,10 +8,11 @@ const formControl=require("../controllers/preform.js")
 const checker=require("../middle/check");
 
 router.get("/",checker,formControl.getAll);
+router.post("/",checker,formControl.saveForm)
 router.get("/:id",checker,formControl.getById)
-router.post("/register",checker,formControl.saveForm)
-router.put("/update/:id",checker,formControl.update);
-router.delete("/delete/:id",checker,formControl.deleteById);
+
+router.put("/:id",checker,formControl.update);
+router.delete("/:id",checker,formControl.deleteById);
 
 
 
